Chore: fix feature icons on mobile

--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -88,7 +88,7 @@
         }
 
         img {
-          width: 38px;
+          width: 37px;
           margin: 0 auto;
         }
 
